details on table page

--- a/client/src/NavBar.css
+++ b/client/src/NavBar.css
@@ -99,7 +99,7 @@ input[type="text"] {
   color: #333;
 }
 .popup .close:hover {
-  color: #971b2f;
+  color: #a92d42;
 }
 .popup .content {
   position: relative;
