--- a/client/src/NavBar.css
+++ b/client/src/NavBar.css
@@ -30,6 +30,15 @@ button:hover {
   display: flex;
 }
 
+.name h2 {
+  z-index: 3;
+  position: relative;
+  margin-top: 5%;
+  color: rgb(255, 255, 255);
+  font-family: "Times New Roman", Times, serif;
+  font-size: 25px;
+}
+
 .Navbar .middle {
   flex: 100%;
   display: flex;
@@ -71,7 +80,7 @@ input[type="text"] {
   padding: 20px;
   background: #fff;
   border-radius: 5px;
-  width: 20%;
+  width: 23%;
   position: relative;
   transition: all 5s ease-in-out;
   font-family: "Times New Roman", Times, serif;
