--- a/client/src/LostTable.css
+++ b/client/src/LostTable.css
@@ -8,6 +8,18 @@
   }
 
 .filter {
+  margin-top: 7%;
   text-align: center;
   float: right;
+}
+.box {
+  border: 5px solid #971b2f;
+  background-color: lightgray;
+  padding: 40px;
+  margin-top: 7%;
+  width: 250px;
+  height: 500px;
+  margin-right: 1%;
+  float: right;
+  overflow: auto;
 }
